--- a/src/Components/TodoApp/TodoApp.css
+++ b/src/Components/TodoApp/TodoApp.css
@@ -5,15 +5,17 @@ body {
 }
 
 body {
-  font: 14px "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font:
+    14px "Helvetica Neue",
+    Helvetica,
+    Arial,
+    sans-serif;
   line-height: 1.4em;
   background: #f5f5f5;
-  color: #111111;
+  color: #111;
   min-width: 230px;
   max-width: 550px;
   margin: 0 auto;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
   font-weight: 300;
 }
 
@@ -27,12 +29,5 @@ button {
   font-family: inherit;
   font-weight: inherit;
   color: inherit;
-  -webkit-appearance: none;
   appearance: none;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-button::-moz-focus-inner {
-  border: none;
 }
