--- a/src/Components/TodoFooter/TodoFooter.css
+++ b/src/Components/TodoFooter/TodoFooter.css
@@ -10,7 +10,7 @@
   color: gray;
 }
 
-.footer:before {
+.footer::before {
   content: "";
   position: absolute;
   z-index: -1;
@@ -19,9 +19,12 @@
   left: 0;
   height: 50px;
   overflow: hidden;
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2), 0 8px 0 -3px #f6f6f6,
-    0 9px 1px -3px rgba(0, 0, 0, 0.2), 0 16px 0 -6px #f6f6f6,
-    0 17px 2px -6px rgba(0, 0, 0, 0.2);
+  box-shadow:
+    0 1px 1px rgb(0 0 0 / 20%),
+    0 8px 0 -3px #f6f6f6,
+    0 9px 1px -3px rgb(0 0 0 / 20%),
+    0 16px 0 -6px #f6f6f6,
+    0 17px 2px -6px rgb(0 0 0 / 20%);
 }
 
 .filters {
@@ -52,15 +55,14 @@
 }
 
 .filters li:hover button {
-  border-color: rgba(175, 47, 47, 0.1);
+  border-color: rgb(175 47 47 / 10%);
 }
 
 .filters li button.selected {
-  border-color: rgba(175, 47, 47, 0.2);
+  border-color: rgb(175 47 47 / 20%);
 }
 
-.clear-completed,
-html .clear-completed:active {
+.clear-completed {
   position: relative;
   line-height: 20px;
   text-decoration: none;
