--- a/src/Components/TodoHeader/TodoHeader.css
+++ b/src/Components/TodoHeader/TodoHeader.css
@@ -1,26 +1,16 @@
 .todoapp {
   background: #fff;
-  margin: 130px 0 40px 0;
+  margin: 130px 0 40px;
   position: relative;
-  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 25px 50px 0 rgba(0, 0, 0, 0.1);
+  box-shadow:
+    0 2px 4px 0 rgb(0 0 0 / 20%),
+    0 25px 50px 0 rgb(0 0 0 / 10%);
 }
 
-.todoapp input::-webkit-input-placeholder {
+.todoapp input::placeholder {
   font-style: italic;
   font-weight: 300;
-  color: rgba(0, 0, 0, 0.4);
-}
-
-.todoapp input::-moz-placeholder {
-  font-style: italic;
-  font-weight: 300;
-  color: rgba(0, 0, 0, 0.4);
-}
-
-.todoapp input::input-placeholder {
-  font-style: italic;
-  font-weight: 300;
-  color: rgba(0, 0, 0, 0.4);
+  color: rgb(0 0 0 / 40%);
 }
 
 .todoapp h1 {
@@ -30,10 +20,8 @@
   font-size: 80px;
   font-weight: 200;
   text-align: center;
-  color: rgba(175, 47, 47, 0.15);
-  -webkit-text-rendering: optimizeLegibility;
-  -moz-text-rendering: optimizeLegibility;
-  text-rendering: optimizeLegibility;
+  color: rgb(175 47 47 / 15%);
+  text-rendering: optimizelegibility;
 }
 
 .new-todo,
@@ -48,17 +36,15 @@
   color: inherit;
   padding: 6px;
   border: 1px solid #999;
-  box-shadow: inset 0 -1px 5px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: inset 0 -1px 5px 0 rgb(0 0 0 / 20%);
   box-sizing: border-box;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
 .new-todo {
   padding: 16px 16px 16px 60px;
   border: none;
-  background: rgba(0, 0, 0, 0.003);
-  box-shadow: inset 0 -2px 1px rgba(0, 0, 0, 0.03);
+  background: rgb(0 0 0 / 3%);
+  box-shadow: inset 0 -2px 1px rgb(0 0 0 / 3%);
 }
 
 :focus {
