--- a/src/Components/TodoItem/TodoItem.css
+++ b/src/Components/TodoItem/TodoItem.css
@@ -2,7 +2,7 @@
   width: 1px;
   height: 1px;
   border: none;
-  opacity: 0;
+  opacity: 0%;
   position: absolute;
   right: 100%;
   bottom: 100%;
@@ -15,18 +15,17 @@
   position: absolute;
   top: -52px;
   left: -13px;
-  -webkit-transform: rotate(90deg);
   transform: rotate(90deg);
 }
 
-.toggle-all + label:before {
+.toggle-all + label::before {
   content: "❯";
   font-size: 22px;
   color: #e6e6e6;
-  padding: 10px 27px 10px 27px;
+  padding: 10px 27px;
 }
 
-.toggle-all:checked + label:before {
+.toggle-all:checked + label::before {
   color: #737373;
 }
 
@@ -44,6 +43,10 @@
 
 .todo-list li:last-child {
   border-bottom: none;
+}
+
+.todo-list li .edit {
+  display: none;
 }
 
 .todo-list li.editing {
@@ -71,13 +74,16 @@
   bottom: 0;
   margin: auto 0;
   border: none;
-  -webkit-appearance: none;
   appearance: none;
   cursor: pointer;
+  opacity: 0%;
 }
 
-.todo-list li .toggle {
-  opacity: 0;
+.todo-list li label {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 15px 85px 15px 60px;
 }
 
 .todo-list li .toggle + label {
@@ -90,16 +96,14 @@
   background-image: url("data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2240%22%20height%3D%2240%22%20viewBox%3D%22-10%20-18%20100%20135%22%3E%3Ccircle%20cx%3D%2250%22%20cy%3D%2250%22%20r%3D%2250%22%20fill%3D%22none%22%20stroke%3D%22%23bddad5%22%20stroke-width%3D%223%22/%3E%3Cpath%20fill%3D%22%235dc2af%22%20d%3D%22M72%2025L42%2071%2027%2056l-4%204%2020%2020%2034-52z%22/%3E%3C/svg%3E");
 }
 
-.todo-list li label {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 15px 85px 15px 60px;
-}
-
 .todo-list li label .created {
   font-size: 13px;
   color: gray;
+}
+
+.completed .description {
+  text-decoration: line-through;
+  color: #cdcdcd;
 }
 
 .todo-list li label .description {
@@ -137,7 +141,7 @@
   right: 10px;
 }
 
-.todo-list li .icon-destroy:after {
+.todo-list li .icon-destroy::after {
   content: "×";
 }
 
@@ -146,19 +150,10 @@
   right: 45px;
 }
 
-.todo-list li .icon-edit:after {
+.todo-list li .icon-edit::after {
   content: "✎";
-}
-
-.todo-list li .edit {
-  display: none;
 }
 
 .todo-list li.editing:last-child {
   margin-bottom: -1px;
-}
-
-.completed .description {
-  text-decoration: line-through;
-  color: #cdcdcd; /* Или другой цвет на ваше усмотрение */
 }
